sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:18: error: type mismatch;
 found   : Unit
 required: Int
     return;
     ^AlgBubbleSort3:17: error: type mismatch;
 found   : Unit
 required: Int
   if(!swapped)
   ^